08_nexus/03_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus
  namespace: equino
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8081
  selector:
    app: nexus
